--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,13 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+#one: {}
 # column: value
 #
-two: {}
+#two: {}
 #  column: value
+testdata:
+  first_name: "Ruby"
+  last_name: "Rails"
+  profile_name: "rubyrails"
+  email: "rubyrails@gmail.com"
